[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1.4.2"
lazy_static = "1.4.0"
slab = "0.4.3"
