[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Nicholas L <nicholas-l@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
nalgebra = "0.30.1"
nom = "7.1.0"
once_cell = "1.9.0"
rayon = "1.5.1"
# regex = "1.4.2"
# lazy_static = "1.4.0"
# slab = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
